<resources>
    <string name="app_name">Proxy Interceptor</string>
    <string name="main_activity_label">Proxy Interceptor Manager</string>
    <string name="proxyindicator">ProxyIndicator</string>
    <string name="proxy_address_hint">Proxy address, ex. localhost</string>
    <string name="address_text">Address:</string>
    <string name="reset_button_text">Reset</string>
    <string name="start_button_text">Start</string>
    <string name="port_text">Port:</string>
    <string name="proxy_port_hint">Proxy port, ex 8080</string>
    <string name="dest_ports_text">Dest ports:</string>
    <string name="command_hint">Command</string>
    <string name="wifi_down_err_msg">WiFi is down</string>
    <string name="log_tag">ProxyInterceptor</string>
    <string name="unknown_host_msg">Unable to get gateway address.</string>
    <string name="autostartSwithText">Autostart</string>
</resources>
