<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="49dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="onStartButtonClick"
                android:text="@string/start_button_text" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buttonReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="onResetButtonClick"
                android:text="@string/reset_button_text" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/address_text"
                    android:textSize="18sp"
                    android:verticalScrollbarPosition="defaultPosition"
                    app:autoSizeTextType="none" />

                <EditText
                    android:id="@+id/proxyAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:ems="10"
                    android:hint="@string/proxy_address_hint"
                    android:inputType="textPersonName" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/port_text"
                    android:textSize="18sp"
                    android:verticalScrollbarPosition="defaultPosition"
                    app:autoSizeTextType="none" />

                <EditText
                    android:id="@+id/proxyPort"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:ems="10"
                    android:hint="@string/proxy_port_hint"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/dest_ports_text"
                    android:textSize="18sp"
                    android:verticalScrollbarPosition="defaultPosition"
                    app:autoSizeTextType="none" />

                <EditText
                    android:id="@+id/proxyDestPort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="80, 443" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="8sp"
                android:paddingBottom="8sp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:clickable="false"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/autostartSwithText"
                    android:textSize="18sp"
                    android:verticalScrollbarPosition="defaultPosition"
                    app:autoSizeTextType="none" />

                <Switch
                    android:id="@+id/autostartSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="0"
                    android:checked="false"
                    android:freezesText="false"
                    android:gravity="center_vertical"
                    android:paddingLeft="18sp"
                    android:paddingRight="18sp"
                    android:scaleX="1.3"
                    android:scaleY="1.2"
                    android:textAllCaps="false"
                    android:textSize="18sp" />

            </TableRow>

        </TableLayout>

        <EditText
            android:id="@+id/command"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:gravity="start|top"
            android:hint="@string/command_hint"
            android:inputType="textMultiLine"
            android:singleLine="false" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>